# Testing-Hall-Sensor

./: .gitignore  Makefile  PROJECT_COMPLETE.md  README.md  communication_manager.c  communication_manager.h  linker_script.ld  main_controller.c  main_controller.h  main_controller_v3.c  startup_gcc.s  system_diagnostics.c  system_diagnostics.h
.nested_git_backups/RVMDKN32G430_git_backup_20251021164242/: config
App/inc/: SystemDefine.h  SystemInterface.h
App/src/: Adc.c  Pwm.c  Spi.c  SystemClock.c  System_Init.c  Uart.c  main.c
Driver/CMSIS/device/: n32g430.h  system_n32g430.c
Driver/n32g430_std_periph_driver/inc/: misc.h  n32g430_adc.h  n32g430_beeper.h  n32g430_can.h  n32g430_comp.h  n32g430_crc.h  n32g430_dma.h  n32g430_exti.h  n32g430_flash.h  n32g430_gpio.h  n32g430_i2c.h  n32g430_pwr.h  n32g430_rcc.h  n32g430_rtc.h  n32g430_tim.h  n32g430_usart.h
Driver/n32g430_std_periph_driver/src/: n32g430_adc.c  n32g430_beeper.c  n32g430_can.c  n32g430_comp.c  n32g430_crc.c  n32g430_dma.c  n32g430_exti.c  n32g430_flash.c  n32g430_gpio.c  n32g430_i2c.c  n32g430_iwdg.c  n32g430_pwr.c  n32g430_rcc.c  n32g430_rtc.c  n32g430_tim.c  n32g430_usart.c  n32g430_wwdg.c
Foc/inc/: Brushless.h  CurrentLoop.h  DataDeal.h  Data_Uart.h  Develop.h  EncObserver.h  ErrDeal.h  Hall.h  MotorDrive.h  PublicDefine.h  SpeedCtrl.h  Svpwm.h  UserParam.h
Foc/iqmath/: IQmath.h  IQmathLib.h
Foc/src/: BrushlessPiCtrl.c  CurrentLoop.c  DataDeal.c  Data_Uart.c  EncObserver.c  ErrDeal.c  FunctionWrappers.c  Hall.c  IdIqFedBak.c  MotorDrive.c  PublicDefine.c  SpeedCtrl.c  StartStopCtrl.c  Svpwm.c
Foc/user/: i2c_drv.c  i2c_drv.h  log.h  myiic.c  myiic.h  oled.c  oled.h
RVMDK/RVMDKN32G430/: .gitignore  README.md
controllers/: communication_controller.c  hardware_controller.c  hardware_controller.h  motor_controller.c  motor_controller.h  safety_controller.c  safety_controller.h
docs/: MODULAR_ARCHITECTURE_SUMMARY.md  MODULAR_INTEGRATION_TODO.md
tests/: PWM_SAFETY_CHECK.md  QUICK_START.md  test_plan.md
tests/hil_gui/: CMakeLists.txt  README.md  build.sh
tests/hil_gui/src/: debugger_interface.cpp  debugger_interface.h  main.cpp  mainwindow.cpp  mainwindow.h  motor_simulator.cpp  motor_simulator.h  plot_widget.cpp  plot_widget.h  test_sequence.cpp  test_sequence.h  uart_monitor.cpp  uart_monitor.h
tests/hil_gui/ui/: mainwindow.ui
